# thinksynth

./: .cvsignore  AUTHORS  Audio.h  AudioBuffer.cpp  AudioBuffer.h  Exception.cpp  Exception.h  Makefile  Makefile.am  OSSAudio.cpp  OSSAudio.h  PORTING  README.JACK  README.MIDI  README.md  TODO  Wav.cpp  Wav.h  acinclude.m4  autogen.sh  buffer.cpp  buffer.h  build.mk.in  compile.sh  config.h  configure.ac  configure.in  endian.cpp  endian.h  main.cpp  make_release  oss.cpp  thArg.cpp  thArg.h  thAudio.h  thAudioBuffer.cpp  thAudioBuffer.h  thBSTree.cpp  thBSTree.h  thHeap.cpp  (+18 more)
debian/: .cvsignore  changelog  control  copyright  libthink3-dev.install  libthink3.install  libthink3.shlibs  libthink4-dev.dirs  rules  thinksynth-data.install  thinksynth-plugins.dirs  thinksynth-plugins.install  thinksynth.dirs  thinksynth.docs  thinksynth.install  thinksynth.menu
docs/: .cvsignore  Makefile.in  socket_protocol.txt  thinksynth.1.in
dsp/: 5-17-03-0540.dsp  5-17-03-1243.dsp  5-17-03-1407.dsp  Makefile.in  acid00.dsp  amb01.dsp  ambient-000.dsp  ambient-001.dsp  analog00.dsp  analog01.dsp  analog02.dsp  analog03.dsp  anasync.dsp  ansynth0.dsp  aphxsd.dsp  aspect.dsp  aspect2.dsp  aspect3.dsp  bd0.dsp  bd1.dsp  bd10.dsp  bd2.dsp  bd3.dsp  bd4.dsp  bd5.dsp  bd6.dsp  bd7.dsp  bd8.dsp  bd9.dsp  bdshaped.dsp  bemu0.dsp  bemu1.dsp  brass.dsp  buzzy.dsp  chantest.dsp  coolbuzz.dsp  dfb.dsp  dturn.dsp  ebass01.dsp  filterexample.dsp  (+43 more)
dsp/args/: amb01.dsp  anasync.dsp  aspect2.dsp  organ0.dsp  rpiano0.dsp  shapeo.dsp  syncfun.dsp  ts1.dsp
dsp/effects/: distortion.dsp  distortion2.dsp  distortion3.dsp  echofilt.dsp  reverb01.dsp  vocode.dsp  vocode2.dsp  vocode3.dsp  whistlesynth01.dsp
dsp/noargs/: ambient-000.dsp  ambient-001.dsp  analog00.dsp  analog01.dsp  aspect.dsp  aspect3.dsp  bd0.dsp  bd1.dsp  bd2.dsp  bd3.dsp  bd8.dsp  chantest.dsp  dfb.dsp  filterexample.dsp  fmtst.dsp  harpsi0.dsp  harpsi1.dsp  hat0.dsp  hat1.dsp  jp420-B.dsp  jp420.dsp  mfm01.dsp  organ1.dsp  organ2.dsp  piano0.dsp  piano1.dsp  rpiano1.dsp  sd0.dsp  sd1.dsp  sd2.dsp  smack0.dsp  smoothie.dsp  sorg.dsp  sqrtest.dsp  supersaw.dsp  windowform.dsp
dsp/old/: 5-17-03-0540.dsp  5-17-03-1243.dsp  5-17-03-1407.dsp  acid00.dsp  analog02.dsp  analog03.dsp  aphxsd.dsp  bd10.dsp  bd4.dsp  bd5.dsp  bd6.dsp  bd7.dsp  bd9.dsp  bemu0.dsp  bemu1.dsp  buzzy.dsp  coolbuzz.dsp  dturn.dsp  ebass01.dsp  firtest.dsp  formant0.dsp  pulsephase.dsp  pwtst.dsp  randompw.dsp  simplefm.dsp  spread.dsp  sscomb.dsp  ssub.dsp  static.dsp  test.dsp  thick.dsp  wav.dsp  weirdsat.dsp  wlantest.dsp
etc/: .cvsignore  Makefile.in  thinkrc.in
libthink/: .cvsignore  Makefile.in  basename.cpp  basename.h  nsmodule_dl.cpp  nsmodule_dl.h  parser.h  thALSAAudio.cpp  thALSAAudio.h  thArg.cpp  thArg.h  thAudio.h  thAudioBuffer.cpp  thAudioBuffer.h  thEndian.h  thException.h  thMidiChan.cpp  thMidiChan.h  thMidiController.cpp  thMidiController.h  thMidiControllerConnection.cpp  thMidiControllerConnection.h  thMidiNote.cpp  thMidiNote.h  thMod.cpp  thMod.h  thNode.cpp  thNode.h  thOSSAudio.cpp  thOSSAudio.h  thPlugin.cpp  thPlugin.h  thPluginManager.cpp  thPluginManager.h  thSynth.cpp  thSynth.h  thSynthTree.cpp  thSynthTree.h  thUtil.cpp  thUtil.h  (+6 more)
patches/: Makefile.in  test.patch
patches/bass/: AcidBass-2.patch  AcidBass.patch  ElectroFuzz.patch  FatRes.patch  FullBass.patch  FunkMachine.patch  FuzzBass.patch  PhatRip.patch  PureBass.patch  ResBass.patch  SmoothBass.patch  SmoothBass2.patch  SmoothBass3.patch  SmoothFM.patch  TS-Nintendo.patch  ThroatBass.patch  TranceRay.patch  TranceSeq.patch  TronBass-2.patch  TronBass.patch  VoiceBass.patch  Walking.patch  WarmBass.patch
patches/brass/: FrenchHorn.patch  Trumpet.patch  Trumpet2.patch
patches/leads/: BuzzBox.patch  Classic.patch  Comet.patch  Cyan.patch  EKeyboard.patch  Jab.patch  MegaRes.patch  MegaRes2.patch  MegaRes3.patch  Pulsar.patch  Pure.patch  RaveCheese-2.patch  RaveCheese-3.patch  RaveCheese-4.patch  RaveCheese-5.patch  RaveCheese.patch  ResBeam.patch  Sharp.patch  Smoov.patch  SoftBright.patch  SoftLead.patch  SuperRes.patch  TS-Clear-2.patch  TS-Clear.patch  TS-Jab-2.patch  TS-Jab-3.patch  TS-Jab.patch  ThickRythmic-2.patch  ThickRythmic.patch  TranceSeq.patch  TronLead.patch  Vibro.patch  Wafer.patch
patches/organs/: ElectricPiano.patch  Organ1.patch  Organ2.patch  Organ3.patch  Organ4.patch  Organ5.patch  PsyOrgan.patch  Soft.patch  TS-FMOrgan.patch  TS-SynthOrgan.patch
patches/pads/: Buzzy.patch  Cringe-2.patch  Cringe.patch  Medium.patch  Rythmic-2.patch  Rythmic.patch  SynBrass.patch  SynString.patch
patches/winds/: flute-0.patch
plugins/: .cvsignore  Makefile  Makefile.am  Makefile.in  plugin-common.inc.in  plugin-common.mk.in  test.cpp
plugins/analysis/: Makefile  pitch.cpp
plugins/delay/: Makefile  echo.cpp  fir.cpp
plugins/env/: .cvsignore  Makefile  ad.cpp  adsfr.cpp  adsr.cpp  dynmap.cpp  followavg.cpp  follower.cpp  map.cpp
plugins/fft/: dsp.c
plugins/filt/: Makefile  allpass.cpp  comb.cpp  divbuf.cpp  ds.cpp  dshape.cpp  ink.cpp  ink2.cpp  ink3.cpp  inkshape.cpp  moog.cpp  rds.cpp  res1pole.cpp  res2pole.cpp  (+3 more)
scripts/: README  regargify.pl
src/: .cvsignore  Exception.h  Makefile.am  Makefile.in  endian.cpp  gthALSAAudio.cpp  gthALSAAudio.h  gthALSAMidi.cpp  gthALSAMidi.h  gthAudio.h  gthDummyAudio.cpp  gthDummyAudio.h  gthJackAudio.cpp  gthJackAudio.h  gthPatchfile.cpp  gthPatchfile.h  gthPrefs.cpp  gthPrefs.h  gthSignal.h  gui-util.h  main.cpp  prefs.cpp  prefs.h  seq.cpp  thALSAAudio.cpp  thALSAAudio.h  thAudio.h  thBSTree.cpp  thBSTree.h  thBTree.cpp  thBTree.h  thHeap.cpp  thHeap.h  thList.cpp  thList.h  thPluginSignaler.cpp  thPluginSignaler.h  thinklang.y  thinklex.l  ui.cpp  (+1 more)
src/gui/: .cvsignore  AboutBox.cpp  AboutBox.h  ArgSlider.cpp  ArgSlider.h  ArgTable.cpp  ArgTable.h  Keyboard.cpp  Keyboard.h  KeyboardWindow.cpp  KeyboardWindow.h  MainSynthWindow.cpp  MainSynthWindow.h  Makefile.in  MidiMap.cpp  MidiMap.h  PatchSelWindow.cpp  PatchSelWindow.h  thinksynth.xpm
src/old/: monotest.cpp  thOSSAudio.cpp  thOSSAudio.h  thWav.cpp  thWav.h
(+72 files in other folders)
