bin_PROGRAMS = thinksynth

thinksynth_SOURCES = \
	main.cpp \
	thArg.cpp \
	thAudioBuffer.cpp \
	thBSTree.cpp \
	thList.cpp \
	thMidiChan.cpp \
	thMidiNote.cpp \
	thMod.cpp \
	thNode.cpp \
	thOSSAudio.cpp \
	thPlugin.cpp \
	thPluginManager.cpp \
	thPluginSignaler.cpp \
	thWav.cpp

thinksynth_LDADD = @LEXLIB@

INCLUDES = 
