bin_PROGRAMS = thinksynth

thinksynth_SOURCES = \
	thinklang.y \
	thinklex.l \
	main.cpp \
	thArg.cpp \
	thAudioBuffer.cpp \
	thBSTree.cpp \
	thHeap.cpp \
	thList.cpp \
	thMidiChan.cpp \
	thMidiNote.cpp \
	thMod.cpp \
	thNode.cpp \
	thOSSAudio.cpp \
	thPlugin.cpp \
	thPluginManager.cpp \
	thPluginSignaler.cpp \
	thWav.cpp

thinksynth_LDADD = @LEXLIB@

INCLUDES = 
